--- a/themes/wwcomps/assets/css/main.css
+++ b/themes/wwcomps/assets/css/main.css
@@ -53,4 +53,6 @@
 /*Start of Rannojit*/
 
 @import url('_ended-competitions.css');
+@import url('_wc_common.css');
+@import url('_woocommerce.css');
 
