--- a/themes/wwcomps/assets/css/_contact-us.css
+++ b/themes/wwcomps/assets/css/_contact-us.css
@@ -16,6 +16,10 @@
 .input-field-col{
 	padding-bottom: 30px;
 }
+.input-field-col span{
+	display: block;
+	width: 100%;
+}
 .input-field-col input[type="text"],
 .input-field-col input[type="email"],
 .input-field-col textarea{
