--- a/themes/wwcomps/assets/css/_commons.css
+++ b/themes/wwcomps/assets/css/_commons.css
@@ -210,7 +210,8 @@ ul.reset-list,
 ol.reset-list,
 ul.sub-menu,
 .fl-pagi-cntlr ul,
-.reset-slect ul{
+.reset-slect ul,
+.lottery-pn-answers{
 	margin: 0;
 	padding: 0;
 	list-style: none;
@@ -218,7 +219,8 @@ ul.sub-menu,
 .reset-list li,
 ul.sub-menu li,
 .fl-pagi-cntlr ul li,
-.reset-slect ul li{
+.reset-slect ul li,
+.lottery-pn-answers li{
 	padding: 0;
 	margin: 0;
 	list-style: none;
@@ -227,7 +229,8 @@ ul.sub-menu li,
 .reset-list li:before,
 ul.sub-menu li:before,
 .fl-pagi-cntlr ul li:before,
-.reset-slect ul li:before{
+.reset-slect ul li:before,
+.lottery-pn-answers li:before{
 	content: none!important;
 }
 
