--- a/themes/wwcomps/assets/css/_current-competition-entry.css
+++ b/themes/wwcomps/assets/css/_current-competition-entry.css
@@ -104,12 +104,23 @@
 
 .summary.entry-summary.custom-summary{
 	background: #fff;
+	padding-top: 40px;
 }
 
 .summary.entry-summary.custom-summary .cart.pick-number{
-	padding: 50px 38px 40px;
+	padding-top: 50px;
+	padding-bottom: 40px;
 	background: #F7F4F2;
 	margin-bottom: 0;
+}
+.summary.entry-summary.custom-summary .cart.pick-number,
+.summary.entry-summary.custom-summary{
+	padding-left: 38px;
+	padding-right: 38px;
+}
+.summary.entry-summary.custom-summary .cart.pick-number{
+	margin-left: -38px;
+	margin-right: -38px;
 }
 .lottery-question,
 .fl-product-summary-txt h4{
@@ -142,6 +153,35 @@
 }
 .summary.entry-summary.custom-summary .fl-product-summary-txt ul li{
 	width: 100%!important;
+}
+.woocommerce div.product .product_title{
+	color: #1C75BC;
+	font-size: 44px;
+	line-height: 1.2
+	margin-bottom: 24px;
+	font-family: 'LeagueSpartan-Bold';
+}
+.woocommerce div.product div.summary > p{
+	margin-bottom: 13px;
+	font-size: 22px;
+	line-height: 1.2;
+	font-weight: normal;
+	font-family: 'LeagueSpartan-Medium';
+	text-transform: uppercase;
+}
+.woocommerce div.product div.summary > p strong{
+	font-weight: normal;
+	font-family: 'LeagueSpartan-Bold';
+}
+.competition-ends-title{
+	display: block;
+	color: #3A3A3A;
+	font-weight: 600;
+	margin-bottom: 30px;
+}
+.main-lottery.lottery-time-countdown{
+	display: flex;
+	margin-bottom: 50px;
 }
 
 @media(max-width:1199px){
